--- a/index.html
+++ b/index.html
@@ -6,9 +6,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CustomWebsite</title>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        
     </head>
     <body>
-        <h1 id="Title">Hi<br/>This Is A<br/>Test</h1>
+        <canvas id="canvas-one" width="1500" height="700">
+            <p>You don't support the 'canvas' element? Better get to fixing that.</p>
+        </canvas>
+        <script src="script.js"></script>
+        <div id="TitleHolder">
+            <p id="Title">H</p>
+            <p id="Title">I</p><br/>
+            <p id="Title">T</p>
+            <p id="Title">H</p>
+            <p id="Title">I</p>
+            <p id="Title">S </p>
+            <p id="Title">I</p>
+            <p id="Title">S </p>
+            <p id="Title">A</p><br/>
+            <p id="Title">T</p>
+            <p id="Title">E</p>
+            <p id="Title">S</p>
+            <p id="Title">T</p><br/><br />
+            <!-- <input type="range" min="1" max="10" name="Duration" id="durSlider"> -->
+        </div>
     </body>
 </html>
