--- a/pages/about.html
+++ b/pages/about.html
@@ -12,18 +12,18 @@
 
 <div id="main-container">
     <div id="header-container">
-        <div id="header-icon">Mr.Cart</div>
+        <div id="header-icon" onclick="window.location = '../pages/home.html'">Mr.Cart</div>
         <div id="header-button-container">
-            <button class="header-buttons" style="color: #6dbeff">Home</button>
+            <button class="header-buttons" onclick="window.location = '../pages/home.html'">Home</button>
             <button class="header-buttons" onclick="window.location = '../pages/products.html'">Products</button>
-            <button class="header-buttons" onclick="window.location = '../pages/about.html'">About</button>
+            <button class="header-buttons" style="color: #6dbeff">About</button>
             <button class="header-buttons" onclick="window.location = '../pages/contact.html'">Contact</button>
         </div>
     </div>
     <div style="display: flex;flex-direction: row;margin-top: 75px;justify-content: space-evenly">
 
         <div style="padding:100px">
-            <h1 style="font-size: 60px">EVERY THING YOU NEED.</h1>
+            <h1 style="font-size: 60px">About us</h1>
             <p>
                 From our humble beginnings as a small discount retailer in Rogers, Ark., Walmart has opened thousands
                 <br> of stores in the U.S. and expanded internationally. Through innovation, we're creating a seamless
